minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello8-api-dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: hello8-api-dev
  template:
    metadata:
      labels:
        app: hello8-api-dev
    spec:
      imagePullSecrets:
      - name: regcred  # Add creds to specify the private docker registery if needed
      containers:
      - name: hello8-api
        image: ${IMAGE_HOST}/hello8-api:2.0.1
        ports:
        - containerPort: 80 # 8080
